# resolve-hub

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: TICKET_WORKFLOW_GUIDE.md  deployment.md  progress.md  roadmap.md
docs/architecture/: adr-001-defer-pgvector.md  adr-002-frontend-and-browser-auth.md  overview.md
docs/phases/: phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
docs/testing/: authentication.md  phase-gates.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  live-auth.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 20260713_0001_phase1_identity.py  20260716_0002_phase2_ticket_core.py  20260716_0003_phase3_workflows_realtime.py  20260717_0004_phase4_search_foundation.py  20260717_0005_phase4_ai_assistance.py  20260718_0006_phase5_browser_sessions.py  20260721_0007_phase6_lifecycle_analytics_integrations.py  20260721_0008_phase7_rls_storage_observability.py  20260722_0009_phase10_itsm_modules.py  20260723_0010_stripe_billing.py  20260724_0011_auto_verify_users.py
resolvehub/: __init__.py
resolvehub/app/: __init__.py  main.py
resolvehub/scripts/: seed_demo_data.py  test_ticket_lifecycle.py  verify_diagram_workflow.py
tests/integration/: conftest.py  test_phase1_api.py  test_phase2_tickets.py  test_phase3_sla_notifications.py  (+2 more)
(+181 files in other folders)
