[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "resolvehub"
version = "0.1.0"
description = "Multi-tenant service request and operations platform"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic==1.16.5",
  "asyncpg==0.30.0",
  "email-validator==2.2.0",
  "fastapi==0.139.0",
  "pwdlib[argon2]==0.2.1",
  "pydantic==2.13.2",
  "pydantic-settings==2.14.2",
  "PyJWT==2.12.1",
  "python-multipart==0.0.20",
  "redis==6.4.0",
  "sqlalchemy==2.0.51",
  "stripe==11.5.0",
  "structlog==25.4.0",
  "temporalio==1.30.0",
  "uvicorn[standard]==0.35.0",
  "psycopg2-binary==2.9.10",
  "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
  "coverage[toml]==7.10.6",
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.2",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.11",
]

[tool.hatch.build.targets.wheel]
packages = ["resolvehub"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"migrations/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires PostgreSQL and Redis", "security: security boundary test"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["resolvehub"]

[tool.coverage.report]
show_missing = true
fail_under = 70
